🦟 Bug Squashing & Enhancements (1.5.13)
- Lowered distance between sidebar headers.
- Bug where delete from playlist option would show on other people's playlists.
- Fixed bug stopping users from adding songs to playlists.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -89,7 +89,7 @@ To contain all the main styling used throughout the app such as icons, tabs, vie
 }
 
 #sidebar h4 {
-  margin-top: 48px;
+  margin-top: 28px;
 }
 
 #sidebar .tab-btn{
